# embedded-edge-gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: m11_interview_flashcard.md  m12_interview_flashcard.md  m5_frame_protocol.md  m7_m9_interview_flashcard.md
experiments/m11_http/: Buffer.h  HttpRequest.cpp  HttpRequest.h  http_test.cpp
experiments/m3_log/: AsyncLogger.cpp  AsyncLogger.h  test_compile.cpp  test_throughput.cpp  test_timed_flush.cpp
experiments/m5_fsm/: AccessControlFSM.cpp  AccessControlFSM.h  README.md  main.cpp
experiments/m5_parser/: CRC16.cpp  CRC16.h  FrameParser.cpp  FrameParser.h  README.md  fake_stm32.cpp  gateway.cpp  main.cpp  test_crc16.cpp
experiments/m6_queue/: ThreadSafeQueue.h  demo_cv.cpp  demo_safe.cpp  demo_unsafe.cpp  test_bounded.cpp  test_queue.cpp  test_shutdown.cpp
experiments/m7_epoll/: EventLoop.h  channel_et.cpp  zuse.cpp
experiments/m8_pool/: ThreadPool.h  test_future_pool.cpp  test_pool.cpp
src/: main.cpp
src/concurrent/: CMakeLists.txt  ThreadSafeQueue.h
src/config/: CMakeLists.txt  Config.cpp  Config.h
src/config/test/: config_test.cpp
src/db/: CMakeLists.txt  Database.h  Statement.h
src/deploy/: gateway.conf  gateway.service
src/log/: CMakeLists.txt  Logger.h
src/mqtt/: CMakeLists.txt  MqttClient.h
src/net/: Buffer.h  CMakeLists.txt  EventLoop.cpp  EventLoop.h  HttpRequest.cpp  HttpRequest.h  echo_server.cpp  http_server.cpp  timer_server.cpp
src/net/tests/: http_test.cpp
src/protocol/: CMakeLists.txt  CRC16.cpp  CRC16.h  FrameBuilder.cpp  FrameBuilder.h  FrameParser.cpp  FrameParser.h
src/serial/: SerialPort.cpp  SerialPort.h
